--- a/server/package.json
+++ b/server/package.json
@@ -2,9 +2,10 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +17,7 @@
     "firebase-admin": "^12.0.0",
     "fs": "0.0.1-security",
     "helmet": "^7.1.0",
-    "mongoose": "^8.1.3"
+    "mongoose": "^8.1.3",
+    "nodemon": "^3.1.0"
   }
 }
