--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mantine/carousel": "^7.5.3",
+    "@mantine/core": "^7.5.3",
+    "@mantine/hooks": "^7.5.3",
     "axios": "^1.6.7",
+    "embla-carousel-react": "^7.1.0",
     "firebase": "^10.8.0",
     "install": "^0.13.0",
     "localforage": "^1.10.0",
@@ -18,6 +22,8 @@
     "npm": "^10.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-imask": "^7.4.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.22.1",
     "sort-by": "^1.2.0",
     "universal-cookie": "^7.0.2"
@@ -32,6 +38,8 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "postcss": "^8.4.35",
+    "postcss-preset-mantine": "^1.13.0",
+    "postcss-simple-vars": "^7.0.1",
     "tailwindcss": "^3.4.1",
     "vite": "^5.1.4"
   }
