--- a/server/package.json
+++ b/server/package.json
@@ -2,10 +2,9 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
@@ -17,7 +16,6 @@
     "firebase-admin": "^12.0.0",
     "fs": "0.0.1-security",
     "helmet": "^7.1.0",
-    "mongoose": "^8.1.3",
-    "nodemon": "^3.1.0"
+    "mongoose": "^8.1.3"
   }
 }
