updated frontend services and booking

--- a/client/package.json
+++ b/client/package.json
@@ -11,9 +11,24 @@
   },
   "dependencies": {
     "@mantine/carousel": "^7.5.3",
+    "@mantine/charts": "^7.5.3",
+    "@mantine/code-highlight": "^7.5.3",
     "@mantine/core": "^7.5.3",
+    "@mantine/dates": "^7.5.3",
+    "@mantine/dropzone": "^7.5.3",
+    "@mantine/form": "^7.5.3",
     "@mantine/hooks": "^7.5.3",
+    "@mantine/modals": "^7.5.3",
+    "@mantine/notifications": "^7.5.3",
+    "@mantine/nprogress": "^7.5.3",
+    "@mantine/spotlight": "^7.5.3",
+    "@mantine/tiptap": "^7.5.3",
+    "@tabler/icons-react": "^2.47.0",
+    "@tiptap/extension-link": "^2.2.4",
+    "@tiptap/react": "^2.2.4",
+    "@tiptap/starter-kit": "^2.2.4",
     "axios": "^1.6.7",
+    "dayjs": "^1.11.10",
     "embla-carousel-react": "^7.1.0",
     "firebase": "^10.8.0",
     "install": "^0.13.0",
@@ -25,6 +40,7 @@
     "react-imask": "^7.4.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.22.1",
+    "recharts": "2",
     "sort-by": "^1.2.0",
     "universal-cookie": "^7.0.2"
   },
