--- a/client/package.json
+++ b/client/package.json
@@ -10,19 +10,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@mantine/carousel": "^7.5.3",
-    "@mantine/charts": "^7.5.3",
-    "@mantine/code-highlight": "^7.5.3",
-    "@mantine/core": "^7.5.3",
-    "@mantine/dates": "^7.5.3",
-    "@mantine/dropzone": "^7.5.3",
-    "@mantine/form": "^7.5.3",
-    "@mantine/hooks": "^7.5.3",
-    "@mantine/modals": "^7.5.3",
-    "@mantine/notifications": "^7.5.3",
-    "@mantine/nprogress": "^7.5.3",
-    "@mantine/spotlight": "^7.5.3",
-    "@mantine/tiptap": "^7.5.3",
+    "@mantine/carousel": "^7.6.1",
+    "@mantine/charts": "^7.6.1",
+    "@mantine/code-highlight": "^7.6.1",
+    "@mantine/core": "^7.6.1",
+    "@mantine/dates": "^7.6.1",
+    "@mantine/dropzone": "^7.6.1",
+    "@mantine/form": "^7.6.1",
+    "@mantine/hooks": "^7.6.1",
+    "@mantine/modals": "^7.6.1",
+    "@mantine/notifications": "^7.6.1",
+    "@mantine/nprogress": "^7.6.1",
+    "@mantine/spotlight": "^7.6.1",
+    "@mantine/tiptap": "^7.6.1",
     "@tabler/icons-react": "^2.47.0",
     "@tiptap/extension-link": "^2.2.4",
     "@tiptap/react": "^2.2.4",
@@ -38,19 +38,19 @@
     "react": "^18.2.0",
     "react-country-flag": "^3.1.0",
     "react-dom": "^18.2.0",
-    "react-imask": "^7.4.0",
+    "react-imask": "^7.5.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.22.1",
-    "recharts": "2",
+    "recharts": "^2.12.1",
     "sort-by": "^1.2.0",
-    "universal-cookie": "^7.0.2"
+    "universal-cookie": "^7.1.0"
   },
   "devDependencies": {
-    "@types/react": "^18.2.56",
+    "@types/react": "^18.2.60",
     "@types/react-dom": "^18.2.19",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.17",
-    "eslint": "^8.56.0",
+    "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
