--- a/client/package.json
+++ b/client/package.json
@@ -28,9 +28,11 @@
     "@tiptap/react": "^2.2.4",
     "@tiptap/starter-kit": "^2.2.4",
     "axios": "^1.6.7",
+    "clsx": "^2.1.0",
     "dayjs": "^1.11.10",
     "embla-carousel-react": "^7.1.0",
     "firebase": "^10.8.0",
+    "framer-motion": "^11.0.8",
     "install": "^0.13.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
@@ -41,8 +43,10 @@
     "react-imask": "^7.5.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.22.1",
+    "react-type-animation": "^3.2.0",
     "recharts": "^2.12.1",
     "sort-by": "^1.2.0",
+    "tailwind-merge": "^2.2.1",
     "universal-cookie": "^7.1.0"
   },
   "devDependencies": {
